[package]
name = "tless"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
axum = "0.8.4"
chrono = "0.4.41"
clap = { version = "4.5.46", features = ["derive"] }
frontmatter-gen = "0.0.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.47.1", features = ["full"] }
