[package]
name = "tless"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
actix-web = "4"
arc-swap = "1.7.1"
chrono = "0.4.41"
clap = { version = "4.5.46", features = ["derive"] }
notify-debouncer-full = "0.5.0"
frontmatter-gen = "0.0.5"
notify = { version = "8.2.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
toml = "0.9.5"
tera = "1.20.0"
sha2 = "0.10.9"
pulldown-cmark = "0.13.0"
futures = "0.3.31"
num_cpus = "1.17.0"
